# lattice_reformulation

./: .gitignore  01_reduce.sh  01_reformulate.sh  02_solve.py  03_analyze.py  04_analyze.py  CMakeLists.txt  README.md  read_q.py  read_q.sh  reduce.cpp  settingsfile.set  test1.txt
benchmarks/CA/: generate_instances.py
benchmarks/GAP/: generate_instances.py
benchmarks/MIPLIB/: MIPLIB_subset.xlsx
benchmarks/MS/: generate_instances.py
benchmarks/lcuts/: generate_instances.py
benchmarks/marksplit/: generate_instances.py
benchmarks/mknapsack/: generate_instances.py
benchmarks/nostruct_b/: instance_1.lp  instance_10.lp  instance_11_n100_nostruct.lp  instance_12.lp  instance_13.lp  instance_14.lp  instance_15.lp  instance_16_n100_nostruct.lp  instance_17_n100_nostruct.lp  instance_18_n100_nostruct.lp  instance_19_n100_nostruct.lp  instance_20.lp  instance_21.lp  instance_22_n100_nostruct.lp  instance_23_n100_nostruct.lp  instance_24_n100_nostruct.lp  instance_25_n100_nostruct.lp  instance_26_n100_nostruct.lp  instance_27.lp  instance_28.lp  instance_29_n100_nostruct.lp  instance_2_n100_nostruct.lp  instance_30.lp  instance_3_n100_nostruct.lp  instance_4.lp  instance_5.lp  instance_6.lp  instance_7.lp  instance_8.lp  instance_9.lp
benchmarks/nostruct_s/: instance_1.lp  instance_10_n10_nostruct.lp  instance_11.lp  instance_12.lp  instance_13.lp  instance_14.lp  instance_15_n10_nostruct.lp  (+24 more)
cmake/: FindNTL.cmake
src/: Eventhdlr.hpp  EventhdlrReformulate.cpp  EventhdlrReformulate.hpp  Eventhdlr_AHL.cpp  Eventhdlr_Pataki.cpp  main.cpp  utils.cpp  utils.hpp
(+61 files in other folders)
